--- a/app.json
+++ b/app.json
@@ -1,28 +1,26 @@
 {
-  "expo": {
-    "name": "yuna-weather",
-    "slug": "yuna-weather",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "description": "Weather App by ReactNative & Expo",
-    "githubUrl": "https://github.com/haneul9/yuna-weather"
-  }
+    "expo": {
+        "name": "yuna-weather",
+        "slug": "yuna-weather",
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "./assets/icon.png",
+        "splash": {
+            "image": "./assets/splash.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "updates": {
+            "fallbackToCacheTimeout": 0
+        },
+        "assetBundlePatterns": ["**/*"],
+        "ios": {
+            "supportsTablet": true
+        },
+        "web": {
+            "favicon": "./assets/favicon.png"
+        },
+        "description": "Weather App by ReactNative & Expo",
+        "githubUrl": "https://github.com/haneul9/yuna-weather"
+    }
 }
