--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "eslint-config-prettier": "^6.11.0",
     "expo": "~38.0.8",
+    "expo-linear-gradient": "~8.2.1",
     "expo-location": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "prop-types": "^15.7.2",
@@ -18,7 +19,7 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-web": "~0.11.7",
-    "expo-linear-gradient": "~8.2.1"
+    "expo-font": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
@@ -26,5 +27,10 @@
     "eslint": "^7.6.0",
     "eslint-plugin-react": "^7.20.5"
   },
-  "private": true
+  "private": true,
+  "rnpm": {
+    "assets": [
+      "./assets/fonts"
+    ]
+  }
 }
